--- a/src/styles/MitulSavani.css
+++ b/src/styles/MitulSavani.css
@@ -8,7 +8,18 @@
     color: whitesmoke;
   }
   
-  .main-container {
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(to bottom right, #536976, #292E49);
+}
+
+.main-container2 {
     display: flex;
     flex-direction: column;
     height: 100vh;
