Updated css styling

--- a/src/styles/RyanLiszewski.css
+++ b/src/styles/RyanLiszewski.css
@@ -6,6 +6,7 @@
 .title-ryan, .subtitle-ryan {
   font-family: 'Futura Book';
   color: whitesmoke;
+  margin: 0 50px; 
 }
 
 .main-container-ryan {
@@ -13,15 +14,23 @@
   flex-direction: column;
   height: 100vh;
   width: 100vw;
-  justify-content: center;
-  align-items: center;
   background: linear-gradient(to bottom right, #ee9ca7, #ffdde1);
 }
 
-.back-arrow-container {
-  position: absolute;
-  top: 50px;
-  left: 50px;
+.arrow-avatar-container {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: 100px;
+  background: linear-gradient(to bottom right, #f6cdd3, #9ceee3);
+  align-items: center;
+  justify-content: center space-between;
+}
+
+.back-arrow-container-ryan {
+  align-self: flex-start;
+  margin: auto; 
+  margin-left: 50px;
 }
 
 .back-arrow-icon {
@@ -30,21 +39,23 @@
 }
 
 .avatar-container-ryan {
-  position: absolute;
-  top: 50px;
-  right: 50px; 
-  
+  align-self: flex-end;
+  margin: auto; 
+  margin-right: 50px; 
 }
 
 .avatar-ryan {
-  width: 240px;
-  height: 240px;
-  border-radius: 120px;
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
 }
 
 .title-ryan {
   font-size: 65px;
-  text-align: center;
+  text-align: left;
+  margin-left: 50px;
+  margin-top: 50px;
+  
 }
 
 .link {
@@ -57,12 +68,14 @@
   margin-top: 20px;
 }
 
-.links-container {
+.links-container-ryan {
   display: flex;
   flex-direction: row;
-  margin-top: 40px;
+  margin: 0 50px 20px;
+  margin-top: auto;
   width: 200px;
   justify-content: space-between;
+  align-items: center;
 }
 
 .links-icon {
