--- a/src/styles/MonteThakkar.css
+++ b/src/styles/MonteThakkar.css
@@ -3,6 +3,11 @@
   src: url('../assets/Ailerons-Typeface.otf');
 }
 
+@font-face {
+  font-family: 'Futura';
+  src: url('../assets/Futura-Book-Regular.otf');
+}
+
 * {
   font-family: 'Ailerons';
   color: whitesmoke;
@@ -16,6 +21,16 @@
   justify-content: center;
   align-items: center;
   background: linear-gradient(to bottom right, #536976, #292E49);
+}
+
+.portal-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(239,239,239,1);
 }
 
 .back-arrow-container {
@@ -69,4 +84,54 @@
   width: 40px;
   height: 40px;
   background: transparent;
+}
+
+.close-icon {
+  width: 32px;
+  height: 32px;
+}
+
+.lock-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 450px;
+  height: 220px;
+}
+
+.lock-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.lock-input-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 25px;
+}
+
+.phrase-input {
+  width: 200px;
+  height: 45px;
+  color: black;
+  background-color: white;
+  border:1px solid rgb(220, 213, 213);
+  border-radius: 3px;
+  font-size: 18px;
+  font-family: 'Futura';
+  padding-left: 20px;
+  outline: none;
+}
+
+.error {
+  border-color: #F61666;
+  border-width: 2px;
+}
+
+.lock-error-message {
+  color: #F61666;
+  margin-top: 10px;
+  font-size: 154x;
 }
