A🔒 dded a Lock Screen membrane 🔒

--- a/src/styles/MitulSavani.css
+++ b/src/styles/MitulSavani.css
@@ -3,6 +3,11 @@
     src: url('../assets/Kaya_Medium.otf');
 }
 
+@font-face{
+  font-family: 'Futura';
+  src: url('../assets/Futura-Book-Regular.otf')
+}
+
 * .title-mitul, .subtitle-mitul, .thirdheading{
     font-family: 'Kaya_Medium';
     color: wheat;
@@ -17,6 +22,16 @@
     justify-content: center;
     align-items: center;
     background: linear-gradient(to bottom right, #175257, rgb(24, 28, 54));
+}
+
+.portal-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(239,239,239,1);
 }
 
   .back-arrow-container {
@@ -78,3 +93,47 @@
     background: transparent;
   }
   
+  .lock-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 450px;
+    height: 220px;
+  }
+  
+  .lock-icon {
+    width: 50px;
+    height: 50px;
+  }
+  
+  .lock-input-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 25px;
+  }
+  
+  .phrase-input {
+    width: 200px;
+    height: 45px;
+    color: black;
+    background-color: white;
+    border:1px solid rgb(220, 213, 213);
+    border-radius: 3px;
+    font-size: 18px;
+    font-family: 'Futura';
+    padding-left: 20px;
+    outline: none;
+  }
+  
+  .error {
+    border-color: #F61666;
+    border-width: 2px;
+  }
+  
+  .lock-error-message {
+    color: #F61666;
+    margin-top: 10px;
+    font-size: 154x;
+  }
