--- a/src/styles/RyanLiszewski.css
+++ b/src/styles/RyanLiszewski.css
@@ -27,12 +27,17 @@
   max-height: 50%;
 }
 
+.column img {
+  vertical-align: middle;
+  height: 100%;
+}
+
 
 .row {
   display: flex;
-  flex-wrap: wrap;
-  flex: 25%;
-  max-heigh: 50%;
+
+  flex: 25vh;
+  max-height: 100vh;
 }
 
 .arrow-avatar-container {
