--- a/src/styles/MonteThakkar.css
+++ b/src/styles/MonteThakkar.css
@@ -1,16 +1,45 @@
 @font-face {
-  font-family: 'Ailerons';
-  src: url('../assets/Ailerons-Typeface.otf');
-}
-
-@font-face {
   font-family: 'Futura';
   src: url('../assets/Futura-Book-Regular.otf');
 }
 
+@font-face {
+  font-family: 'Proxima-Nova-Regular';
+  src: url('../assets/Proxima-Nova-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Futura-PT-Medium';
+  src: url('../assets/Futura-PT-Medium.otf');
+}
+
 * {
-  font-family: 'Ailerons';
+  font-family: 'Proxima-Nova-Regular';
   color: whitesmoke;
+}
+
+::selection {
+  background: #16F5C4;
+  color: white;
+  /* WebKit/Blink Browsers */
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: rgba(255, 255, 255, 0);
+}
+
+a {
+  font-family: 'Proxima-Nova-Regular';
+}
+
+.NoSelection {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .main-container {
@@ -134,4 +163,86 @@
   color: #F61666;
   margin-top: 10px;
   font-size: 154x;
+}
+
+.dock-avatar {
+  border-radius: 2em;
+}
+
+.About {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  margin-bottom: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.AboutLeftContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.AboutRightContainer {
+  flex: 2;
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-right: 50px;
+}
+
+.ProfileImageContainer {
+  flex: 1;
+  margin-top: 50px;
+}
+
+.ProfileImage {
+  height: 200px;
+  width: 200px;
+  border-radius: 100px;
+}
+
+.LogosImageContainer {
+  flex: 2;
+  flex-direction: column;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.LogosImageRow {
+  flex: 1;
+  flex-direction: row;
+}
+
+.Logo {
+  height: 35px;
+  width: 35px;
+  margin-right: 15px;
+  margin-left: 15px;
+  margin-top: 20px;
+}
+
+.AboutText {
+  font-size: 18px;
+  color: #CBDBD7;
+  font-family: 'Proxima-Nova-Regular';
+}
+
+.IntroHello {
+  font-family: 'Futura-PT-Medium';
+  font-size: 22px;
+  font-weight: bold;
+  color: #91AAB4;
+  letter-spacing: 0px;
+}
+
+.Inline {
+  display: inline;
+}
+
+.Bold {
+  font-weight: bold;
+  color: #91AAB4;
 }
