--- a/src/styles/MonteThakkar.css
+++ b/src/styles/MonteThakkar.css
@@ -234,7 +234,7 @@ a {
   font-family: 'Futura-PT-Medium';
   font-size: 22px;
   font-weight: bold;
-  color: #91AAB4;
+  color: #16F5C4;
   letter-spacing: 0px;
 }
 
@@ -244,7 +244,7 @@ a {
 
 .Bold {
   font-weight: bold;
-  color: #91AAB4;
+  color: #16F5C4;
 }
 
 .portfolio-container {
