--- a/src/styles/MitulSavani.css
+++ b/src/styles/MitulSavani.css
@@ -137,3 +137,40 @@
     margin-top: 10px;
     font-size: 154x;
   }
+
+  .main-container-dashboard{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    background: #181F31
+  }
+
+  .chart-row-container-mitul{
+    display: flex;
+    flex: 1;
+  }
+
+  .chart-container{
+
+    display: flex;
+    flex:1;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .container-1-mitul{
+    flex: 2;
+    background: lightpink;
+  }
+  
+  .container-2-mitul{
+    background: wheat;
+  }
+
+  .container-3-mitul{
+    background: mediumaquamarine;
+  }
+  .container-4-mitul{
+    background: lightseagreen;
+  }
