--- a/src/members/MonteThakkar/Monte_Dock.css
+++ b/src/members/MonteThakkar/Monte_Dock.css
@@ -1,4 +1,5 @@
 /*--Dock--*/
+
 footer {
 	bottom: 0;
 	display: inline-block;
@@ -31,7 +32,7 @@ footer ul {
 	display: inline-block;
 	margin: 0 0.1em;
 	padding: 0;
-	transform-origin: bottom center!important;
+	transform-origin: bottom center !important;
 }
 
 footer li {
@@ -72,11 +73,11 @@ footer li:hover:before {
 }
 
 .jump {
-	-webkit-animation: JUMP 600ms 2 cubic-bezier(.4,0.01,.6,.99);
+	-webkit-animation: JUMP 600ms 2 cubic-bezier(.4, 0.01, .6, .99);
 }
 
 footer img {
-	-webkit-box-reflect: below -5px -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(230,230,230,0.2)), color-stop(100%,rgba(255,255,255,0)));
+	-webkit-box-reflect: below -5px -webkit-gradient(linear, left bottom, left top, color-stop(0%, rgba(230, 230, 230, 0.2)), color-stop(100%, rgba(255, 255, 255, 0)));
 	align-items: center;
 	bottom: 0;
 	display: flex;
@@ -84,7 +85,7 @@ footer img {
 	margin: 0 5px;
 	position: relative;
 	transform: scale(1);
-	transform-origin: bottom center!important;
+	transform-origin: bottom center !important;
 	transition: all 0.2s;
 	width: 4em;
 }
@@ -105,9 +106,10 @@ footer img:hover {
 	}
 	50% {
 		bottom: 20px;
-		padding-bottom:20px;
+		padding-bottom: 20px;
 	}
 	100% {
 		bottom: 0;
-	};
+	}
+	;
 }
